# flowdns

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  quickstart.sh
config/: api-only.toml  server.toml  server.toml.bak
docker/: Dockerfile  docker-compose.yml  init.sql
migrations/: 001_initial_schema.sql  002_ipv6_support.sql
scripts/: build-backend.sh  configure-firewall.sh  create-admin-user.sh  dev-setup.sh  install-build-tools.sh  install-offline.sh  setup-database.sh  setup-proxy.sh  start-all.sh  start-backend.sh  start-frontend.sh
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  models.rs  queries.rs  server.rs  validators.rs
src/api/handlers/: auth.rs  dhcp.rs  dhcp_full.rs  dns.rs  dns_full.rs  docs.rs  mod.rs  system.rs
src/config/: settings.rs
src/database/: mod.rs  models.rs  schema.rs
src/dhcp/: lease_manager.rs  lease_manager_queries.rs  mod.rs  options.rs  packet.rs  server.rs
src/dns/: dynamic_updates.rs  mod.rs  record_types.rs  server.rs  server.rs.bak  simple_server.rs  simple_zone_manager.rs  zone_manager.rs  zone_manager.rs.bak  zone_queries.rs
src/ipv6/: dhcpv6.rs  mod.rs  prefix_delegation.rs  radvd.rs  slaac.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/Layout/: Sidebar.tsx  TopBar.tsx
web/src/contexts/: AuthContext.tsx
web/src/pages/: Dashboard.tsx  DhcpLeases.tsx  DhcpSubnets.tsx  DnsRecords.tsx  DnsZones.tsx  IPv6Management.tsx  Login.tsx  Settings.tsx
